tests/fail/var_different_literal_type.py
a: 10 = 10.0  # cannot be 10.0, only 10
